--- a/_work/3-socweb.html
+++ b/_work/3-socweb.html
@@ -21,7 +21,7 @@ time: "Aug 2018 - May 2019"
             <br>To be Presented at CSCW (Austin, TX, Nov 9-13, 2019)
         </i>
         <br>
-        <a style="font-size:15px;" href="https://manikantareddyd.github.io/papers/CSCW19_LibRA.pdf" target="_blank" >[PDF]</a>
+        <a style="font-size:15px;" href="https://koustuv.com/papers/CSCW19_LibRA.pdf" target="_blank" >[PDF]</a>
     </li>
     <li>
         <b>Birds of a Feather Clock Together: A Study of Person–Organization Fit Through Latent Activity Routines</b><br>
@@ -29,15 +29,15 @@ time: "Aug 2018 - May 2019"
             <br>To be Presented at CSCW (Austin, TX, Nov 9-13, 2019)
         </i>
         <br>
-        <a style="font-size:15px;" href="https://manikantareddyd.github.io/papers/CSCW19_POFit.pdf" target="_blank" >[PDF]</a>
+        <a style="font-size:15px;" href="https://vedantswain.com/papers/CSCW19_POFitRoutines.pdf" target="_blank" >[PDF]</a>
     </li>
     <li>
-        <b>The Language of Minority Stress Experiences of LGBTQ+ Identities on Social Media </b><br>
+        <b>The Language of LGBTQ+ Minority Stress Experiences on Social Media</b><br>
         <i style="font-size:15px; line-height: 0.9;">In Proceedings of the ACM on Human-Computer Interaction, CSCW (PACM HCI) (Acceptance: 31%)
             <br>To be Presented at CSCW (Austin, TX, Nov 9-13, 2019)
         </i>
         <br>
-        <a style="font-size:15px;" href="https://manikantareddyd.github.io/papers/CSCW19_MinorityStress.pdf" target="_blank" >[PDF]</a>
+        <a style="font-size:15px;" href="https://koustuv.com/papers/CSCW19_MinorityStress.pdf" target="_blank" >[PDF]</a>
     </li>
     <li>
         <b>Imputing Missing Social Media Data Stream in Multisensor Studies of Human Behavior</b><br>
@@ -45,7 +45,7 @@ time: "Aug 2018 - May 2019"
             <br>To be Presented at ACII (Cambridge, UK, September 3-6 2019).
         </i>
         <br>
-        <a style="font-size:15px;" href="https://manikantareddyd.github.io/papers/ACII19_SM_Imputation.pdf" target="_blank" >[PDF]</a>
+        <a style="font-size:15px;" href="https://koustuv.com/papers/ACII19_SM_Imputation.pdf" target="_blank" >[PDF]</a>
     </li>
     <li>
         <b>JobLex: A Lexico-Semantic Knowledgebase of Occupational Information Descriptors</b><br>
@@ -53,7 +53,7 @@ time: "Aug 2018 - May 2019"
             <br>Poster To be Presented at SocInfo (Doha, Qatar, Nov 18-21, 2019)
         </i>
         <br>
-         One Page Abstract <a style="font-size:15px;" href="https://manikantareddyd.github.io/papers/Socinfo19_JobLex.pdf" target="_blank" >[PDF]</a>
+         One Page Abstract <a style="font-size:15px;" href="https://koustuv.com/papers/Socinfo19_JobLex.pdf" target="_blank" >[PDF]</a>
         <!--   <a style="font-size:15px;" href="https://github.com/joblex/joblex" target="_blank" >[Lexicon]</a> -->
     </li>
     <li>
@@ -61,13 +61,13 @@ time: "Aug 2018 - May 2019"
         <i style="font-size:15px; line-height: 0.9;">In Proceedings of the ACM on Interactive, Mobile, Wearable and Ubiquitous Technologies (PACM IMWUT) (Acceptance: 25%)</i>
         <br>
         <a style="font-size:15px;" href="https://dl.acm.org/authorize?N688136" target="_blank" >[DL]</a>
-        <a style="font-size:15px;" href="https://manikantareddyd.github.io/papers/IMWUT_HiLo_Perf.pdf" target="_blank" >[PDF]</a>
+        <a style="font-size:15px;" href="https://www.dropbox.com/s/0wmhnib07ga7dfn/final-imwut18b-sub5828-cam-i26.pdf?dl=0" target="_blank" >[PDF]</a>
     </li>
     <li>
         <b>The Tesserae Project: Large-Scale, Longitudinal, In Situ, Multimodal Sensing of Information Workers</b><br>
         <i style="font-size:15px; line-height: 0.9;">In Proceedings of the 2019 CHI Conference on Human Factors in Computing Systems Extended Abstracts (CHI 2019 Case Study), (Acceptance: 30%).</i>
         <br>
         <a style="font-size:15px;" href="https://dl.acm.org/authorize?N688137" target="_blank" >[DL]</a>
-        <a style="font-size:15px;" href="https://manikantareddyd.github.io/papers/CHI19_CS_TesseraeLessons.pdf" target="_blank" >[PDF]</a>
+        <a style="font-size:15px;" href="https://koustuv.com/papers/CHI_CS_TesseraeLessons.pdf" target="_blank" >[PDF]</a>
     </li>
 </ul>
