--- a/_work/4-microsoft.html
+++ b/_work/4-microsoft.html
@@ -1,6 +1,6 @@
 ---
 title: "Microsoft - OS Fundamentals and Data Intelligence<br>Redmond, WA"
-logo: "/images/work/microsoft.png"
+logo: "images/work/microsoft.png"
 time: "May 2019 (Current)"
 ---
 So I just joined the OS fundamentals team that works in drawing insights from millions of windows devices and identify regressions that occur in OS upgrades. I'm not yet entirely sure what all awesome things that we do here, but I'm excited. 
