--- a/resume/index.html
+++ b/resume/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
     <head>
-        <meta name="description" content="This is about Mani, a developer, a curious mind and an amateur astronomer. I heard that you wanted to know me, so here you go.">
+        <meta name="description" content="Musings of curious developer">
         <meta name="author" content="Manikanta Reddy Dornala">
         <meta name="keywords" content="Resume, Manikanta Reddy Dornala, CV">
         <meta name="msvalidate.01" content="10805F027940A5586DCE409A0027B30F">
